--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
 
 :root {
-    --bgColor: rgb(255, 185, 198);
-    --bgColor2: rgb(105, 79, 246);
+    #--bgColor: rgb(255, 185, 198);
+    #--bgColor2: rgb(105, 79, 246);
+    
     #--bgColor: #223344;
     #--bgColor2: #090a0f;
-    --accentColor: #E6E6E6;
+    #--accentColor: #E6E6E6;
+    --bgColor: rgb(254 255 186);
+    --bgColor2: rgb(253 87 49);
+    --accentColor: #000000;
     --font: 'Karla', sans-serif;
     --delay: .3s;
 }
@@ -34,7 +38,7 @@ body {
 
 #userName {
     color: var(--accentColor);
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: bold;
     line-height: 1.25;
     display: block;
@@ -57,7 +61,7 @@ body {
     color: var(--accentColor);
     border: solid var(--accentColor) 2px;
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     text-align: center;
     display: block;
     margin-left: 10px;
@@ -67,6 +71,10 @@ body {
     text-decoration: none;
     /* transition: all .25s cubic-bezier(.08, .59, .29, .99); */
     -webkit-tap-highlight-color: transparent;
+}
+
+.link + .small {
+    font-size: 0.7rem;
 }
 
 @media (hover: hover) {
@@ -101,6 +109,23 @@ body {
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 
+#not-important-link {
+    position: absolute;
+    bottom: 20px;
+    padding-bottom: 20px;
+    color: var(--accentColor);
+    font-size: 1rem;
+    display: block;
+    font-family: var(--font);
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+}
+
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: var(--accentColor);
+}
 
 /*-------------------------animations-----------------------*/
 @keyframes transitionAnimation {
@@ -132,6 +157,26 @@ body {
     }
 }
 
+.shake {
+	animation: shake-animation 4.72s ease infinite;
+	transform-origin: 50% 50%;
+  }
+  .element {
+	margin: 0 auto;
+	width: 150px;
+	height: 150px;
+	background: red;
+  }
+  @keyframes shake-animation {
+	 0% { transform:translate(0,0) }
+	1.78571% { transform:translate(5px,0) }
+	3.57143% { transform:translate(0,0) }
+	5.35714% { transform:translate(5px,0) }
+	7.14286% { transform:translate(0,0) }
+	8.92857% { transform:translate(5px,0) }
+	10.71429% { transform:translate(0,0) }
+	100% { transform:translate(0,0) }
+  }
 
 /*-------------------------popup------------------------*/
 /* credits: https://www.youtube.com/watch?v=lAS2glU0xlc */
