--- a/planning.css
+++ b/planning.css
@@ -244,7 +244,7 @@ header {
 }
 
 .card-reg-bg {
-  background: url("https://ik.imagekit.io/nrqvxs6itqd/EGS_RocketLeague_PsyonixLLC_S1-2560x1440-e9dc9ecfd5a872841615d15ba04600a6_i0XZeC1tvB.jpg")
+  background: url("https://ik.imagekit.io/nrqvxs6itqd/tr:w-355,h-200,c-force/EGS_RocketLeague_PsyonixLLC_S1-2560x1440-e9dc9ecfd5a872841615d15ba04600a6_i0XZeC1tvB.jpg")
     no-repeat;
   background-position: 50%;
 }
