--- a/planning.css
+++ b/planning.css
@@ -110,7 +110,7 @@ header {
 
 .textLogo {
   text-transform: uppercase;
-  color: #7e8186;
+  color: #000000;
   text-align: center;
   font-family: "Oswald", sans-serif;
 }
