--- a/planning.css
+++ b/planning.css
@@ -30,8 +30,8 @@ body {
 /* Navigation */
 
 header {
-  margin: 0px 0px 60px;
-  padding: 60px 0 0 0;
+  margin: 0px 0px 30px;
+  padding: 30px 0 0 0;
 }
 
 .navbar {
@@ -43,6 +43,7 @@ header {
   float: left;
   position: relative;
   top: 5px;
+  color: #000;
 }
 
 .bar {
