--- a/planning.css
+++ b/planning.css
@@ -46,6 +46,19 @@ header {
   color: #000;
 }
 
+.hamburger a.link {
+  all: none;
+  position: absolute;
+  top: -10px;
+  background-color: transparent;
+  color: var(--accentColor);
+  border: solid var(--accentColor) 2px;
+  border-radius: 10px;
+  padding: 10px;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
 .bar {
   border-radius: 6px;
 }
