--- a/planning.css
+++ b/planning.css
@@ -47,9 +47,8 @@ header {
 }
 
 .hamburger a.link {
-  all: none;
   position: absolute;
-  top: -10px;
+  top: -15px;
   background-color: transparent;
   color: var(--accentColor);
   border: solid var(--accentColor) 2px;
@@ -57,6 +56,7 @@ header {
   padding: 10px;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
+  margin: 0;
 }
 
 .bar {
